--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
 	"name": "extensions.silverstripe.org",
 	"description": "The SilverStripe extensions listing site",
 	"require": {
+		"composer/composer": "1.0.*",
 		"silverstripe/framework": "3.1.*",
 		"silverstripe/multivaluefield": "*"
 	},
