Track the SilverStripe versions extensions are compatible with.

--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -2,6 +2,12 @@ Injector:
   ExtensionUpdater:
     constructor:
       - %$PackagistService
+  SilverStripeVersionUpdater:
+    constructor:
+      - %$PackagistService
   UpdateExtensionsTask:
     constructor:
       - %$ExtensionUpdater
+  UpdateSilverStripeVersionsTask:
+    constructor:
+      - %$SilverStripeVersionUpdater
