Add an extension detail builder, currently extracts READMEs.

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
 	"description": "The SilverStripe extensions listing site",
 	"require": {
 		"composer/composer": "1.0.*",
+		"dflydev/markdown": "1.0.*",
+		"ezyang/htmlpurifier": "4.5.*",
 		"guzzle/guzzle": "3.2.*",
 		"silverstripe/framework": "3.1.*",
 		"silverstripe/multivaluefield": "*"
