--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -1,4 +1,7 @@
 Injector:
+  ExtensionBuilder:
+    constructor:
+      - %$PackagistService
   ExtensionUpdater:
     constructor:
       - %$PackagistService
