--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -5,6 +5,7 @@ Injector:
   ExtensionUpdater:
     constructor:
       - %$PackagistService
+      - %$SilverStripe\Elastica\ElasticaService
   SilverStripeVersionUpdater:
     constructor:
       - %$PackagistService
