Add background extension build queueing using resque

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
 	"description": "The SilverStripe extensions listing site",
 	"require": {
 		"ajshort/silverstripe-elastica": "*",
+		"chrisboulton/php-resque": "dev-master",
 		"composer/composer": "1.0.*",
 		"dflydev/markdown": "1.0.*",
 		"ezyang/htmlpurifier": "4.5.*",
