Implement authors listing

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -5,4 +5,5 @@ Director:
   rules:
     "": HomeController
     "extensions": ExtensionsController
+    "authors": AuthorsController
     "tags": TagsController
