Implement vendor listing

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -5,5 +5,6 @@ Director:
   rules:
     "": HomeController
     "extensions": ExtensionsController
+    "vendors": VendorsController
     "authors": AuthorsController
     "tags": TagsController
