Capistrano-based deployments

--- a/.htaccess
+++ b/.htaccess
@@ -15,6 +15,7 @@ ErrorDocument 500 /assets/error-500.html
 
 <IfModule mod_alias.c>
 	RedirectMatch 403 /silverstripe-cache(/|$)
+	RedirectMatch 403 /config(/|$)
 </IfModule>
 
 <IfModule mod_rewrite.c>
