--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -4,7 +4,7 @@ After: framework
 Director:
   rules:
     "": HomeController
-    "extensions": ExtensionsController
+    "add-ons": AddonsController
     "vendors": VendorsController
     "authors": AuthorsController
     "tags": TagsController
