Setting default ElasticSearch cluster name
Easier to get started with Vagrant this way for now

--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -16,3 +16,7 @@ Injector:
   UpdateSilverStripeVersionsTask:
     constructor:
       - %$SilverStripeVersionUpdater
+  SilverStripe\Elastica\ElasticaService:
+    constructor:
+      - %$Elastica\Client
+      - addons
