"Submit" call-to-action (fixes #37)

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -8,3 +8,4 @@ Director:
     "vendors": VendorsController
     "authors": AuthorsController
     "tags": TagsController
+    "submit": SubmitAddonController
