Add custom 404 error page

--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -7,6 +7,10 @@ Injector:
       - %$PackagistService
       - %$SilverStripe\Elastica\ElasticaService
       - %$ResqueService
+  RequestProcessor:
+    properties:
+      filters:
+        - %$SiteErrorPageFilter
   SilverStripeVersionUpdater:
     constructor:
       - %$PackagistService
