--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"ezyang/htmlpurifier": "4.5.*",
 		"guzzle/guzzle": "3.2.*",
 		"silverstripe/framework": "3.1.*",
-		"silverstripe/multivaluefield": "*"
+		"silverstripe/multivaluefield": "*",
+		"knplabs/packagist-api": "0.1.*@dev"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*",
