--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,15 @@
 	"require": {
 		"composer/installers": "*",
 		"ajshort/silverstripe-elastica": "*",
-		"chrisboulton/php-resque": "*",
+		"chrisboulton/php-resque": "1.2.*",
 		"composer/composer": "*",
 		"dflydev/markdown": "1.0.*",
 		"ezyang/htmlpurifier": "4.5.*",
 		"guzzle/guzzle": "3.2.*",
 		"silverstripe/framework": "3.1.*",
 		"silverstripe/multivaluefield": "*",
-		"knplabs/packagist-api": "*"
+		"knplabs/packagist-api": "*",
+		"stojg/silverstripe-resque": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*",
