BuildAddonsTask to make the process more transparent and debuggable

--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -24,3 +24,6 @@ Injector:
     constructor:
       - %$Elastica\Client
       - addons
+  BuildAddonsTask:
+    constructor:
+      - %$AddonBuilder
