--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -7,6 +7,7 @@ Injector:
       - %$PackagistService
       - %$SilverStripe\Elastica\ElasticaService
       - %$ResqueService
+      - %$Composer\Package\Version\VersionParser
   RequestProcessor:
     properties:
       filters:
