--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -1,5 +1,9 @@
+---
+After: 'toolbar/*'
+---
 SSViewer:
   theme: addons
 GlobalNav:
   hostname: 'http://ssorg-another.test.silverstripe.com/'
+  css_path: '/themes/ssv3/css/toolbar.css'
   use_localhost: false
