--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -7,3 +7,6 @@ GlobalNav:
   hostname: 'http://ssorg.dev/'
   css_path: '/themes/ssv3/css/toolbar.css'
   use_localhost: false
+GlobalNavTemplateProvider:
+  connection_timeout: 1000
+  transfer_timeout: 2000
