--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -4,9 +4,9 @@ After: 'toolbar/*'
 SSViewer:
   theme: addons
 GlobalNav:
-  hostname: 'http://ssorg.dev/'
+  hostname: 'http://ssorg-another.test.silverstripe.com/'
   css_path: '/themes/ssv3/css/toolbar.css'
   use_localhost: false
 GlobalNavTemplateProvider:
-  connection_timeout: 2000
-  transfer_timeout: 3000
+  connection_timeout: 1000
+  transfer_timeout: 2000
