--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -1,3 +1,6 @@
+---
+name: 'addonsinjector'
+---
 Injector:
   AddonBuilder:
     constructor:
@@ -24,7 +27,17 @@ Injector:
   SilverStripe\Elastica\ElasticaService:
     constructor:
       - %$Elastica\Client
-      - addons
+      - 'addons-dev'
   BuildAddonsTask:
     constructor:
       - %$AddonBuilder
+
+---
+Only:
+  environment: 'live'
+---
+Injector:
+  SilverStripe\Elastica\ElasticaService:
+    constructor:
+      - %$Elastica\Client
+      - 'addons'
