Use new global toolbar, update dependencies

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -5,6 +5,7 @@ SSViewer:
   theme: addons
 GlobalNav:
   hostname: 'http://www.silverstripe.org/'
+  snippet_path: '/assets'
   css_path: '/themes/ssv3/css/toolbar.css'
   use_localhost: false
 GlobalNavTemplateProvider:
