--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		"guzzle/guzzle": "3.2.*@stable",
 		"silverstripe/framework": "3.1.*@stable",
 		"silverstripe/multivaluefield": "*",
-		"silverstripe/toolbar": "*",
+		"silverstripe/toolbar": "3.0.*@stable",
 		"knplabs/packagist-api": "1.*@stable",
 		"stojg/silverstripe-resque": "*",
 		"ruflin/elastica": "dev-master#f235765a7b2b088fb27510a75fe3472bb94188cf"
