--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,14 @@
 		"composer/composer": "*",
 		"dflydev/markdown": "1.0.*@stable",
 		"ezyang/htmlpurifier": "4.5.*@stable",
-		"guzzle/guzzle": "3.2.*@stable",
+		"guzzle/guzzle": "3.2.0",
 		"silverstripe/framework": "3.1.*@stable",
 		"silverstripe/multivaluefield": "*",
 		"silverstripe/toolbar": "3.0.*@stable",
 		"knplabs/packagist-api": "1.*@stable",
 		"stojg/silverstripe-resque": "*",
-		"ruflin/elastica": "dev-master#f235765a7b2b088fb27510a75fe3472bb94188cf"
+		"ruflin/elastica": "dev-master#f235765a7b2b088fb27510a75fe3472bb94188cf",
+		"symfony/event-dispatcher": "2.7.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "3.7.*",
