--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -3,10 +3,30 @@ After: 'toolbar/*'
 ---
 SSViewer:
   theme: addons
-GlobalNav:
-  hostname: '//www.silverstripe.org/'
-  css_path: '/themes/ssv3/css/toolbar.css'
-  use_localhost: false
 GlobalNavTemplateProvider:
   connection_timeout: 2000
   transfer_timeout: 6000
+---
+Only:
+  environment: dev
+---
+GlobalNav:
+  hostname: '//ssorg.dev/'
+  css_path: '/themes/ssv3/css/toolbar.min.css'
+  use_localhost: false
+---
+Only:
+  environment: test
+---
+GlobalNav:
+  hostname: '//sssites-ssorg-uat.sites.silverstripe.com/'
+  css_path: '/themes/ssv3/css/toolbar.min.css'
+  use_localhost: false
+---
+Only:
+  environment: live
+---
+GlobalNav:
+  hostname: '//www.silverstripe.org/'
+  css_path: '/themes/ssv3/css/toolbar.min.css'
+  use_localhost: false
