Removing internal SS dev environment stuff

--- a/mysite/_config/config.yml
+++ b/mysite/_config/config.yml
@@ -11,7 +11,7 @@ Only:
   environment: dev
 ---
 GlobalNav:
-  hostname: '//ssorg.dev/'
+  hostname: '//www.silverstripe.org/'
   css_path: '/themes/ssv3/css/toolbar.min.css'
   use_localhost: false
 ---
@@ -19,7 +19,7 @@ Only:
   environment: test
 ---
 GlobalNav:
-  hostname: '//sssites-ssorg-uat.sites.silverstripe.com/'
+  hostname: '//www.silverstripe.org/'
   css_path: '/themes/ssv3/css/toolbar.min.css'
   use_localhost: false
 ---
