--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -48,4 +48,4 @@ Injector:
   SilverStripe\Elastica\ElasticaService:
     constructor:
       - %$Elastica\Client
-      - sample-index
+      - addons-dev
