FIX update to master of elastica module

--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,6 @@
     {
       "type": "vcs",
       "url": "https://github.com/silverstripe/silverstripe-globaltoolbar.git"
-    },
-    {
-      "type": "vcs",
-      "url": "https://github.com/assertchris/silverstripe-elastica"
     }
   ],
   "require": {
@@ -22,8 +18,7 @@
     "silverstripe/toolbar": "^4.0",
     "knplabs/packagist-api": "1.*@stable",
     "stojg/silverstripe-resque": "*",
-    "ruflin/elastica": "^3.1",
-    "silverstripe-australia/elastica": "dev-remove-solr-reference",
+    "silverstripe-australia/elastica": "dev-master",
     "symfony/event-dispatcher": "^2.8",
     "symfony/filesystem": "^2.8",
     "symfony/process": "^2.8",
