--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -9,3 +9,4 @@ Director:
     "authors": AuthorsController
     "tags": TagsController
     "submit": SubmitAddonController
+    "addonSort": AjaxController
