--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     "composer/installers": "^1.2",
     "composer/composer": "^1.2",
     "ezyang/htmlpurifier": "4.5.*@stable",
-    "silverstripe/framework": "3.1.*@stable",
-    "silverstripe/multivaluefield": "*",
+    "silverstripe/framework": "^3",
+    "symbiote/silverstripe-multivaluefield": "^2",
     "silverstripe/toolbar": "^4.0",
     "knplabs/packagist-api": "1.*@stable",
     "stojg/silverstripe-resque": "*",
-    "silverstripe-australia/elastica": "dev-master",
+    "symbiote-library/silverstripe-elastica": "^2",
     "symfony/event-dispatcher": "^2.8",
     "symfony/filesystem": "^2.8",
     "symfony/process": "^2.8",
