--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,16 @@
     "symfony/finder": "^2.8",
     "symfony/console": "^2.8",
     "symfony/yaml": "^2.8",
-    "guzzle/guzzle": "~3.0"
+    "guzzlehttp/guzzle": "~3.0",
+    "symfony/console": "^2.7",
+    "symfony/debug": "^2.7"
   },
   "replace": {
     "extensions.silverstripe.org": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.8",
-    "phpdocumentor/reflection-docblock": "~3.1.1",
+    "phpdocumentor/reflection-docblock": "^2",
     "silverstripe/sqlite3": "*"
   },
   "minimum-stability": "dev",
