--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "guzzlehttp/guzzle": "^6",
     "symbiote/silverstripe-queuedjobs": "dev-queue-buildtask as 3.x-dev",
     "silverstripe/crontask": "^1.2",
-    "silverstripe/environmentcheck": "^1.3"
+    "silverstripe/environmentcheck": "^1.3",
+    "aws/aws-sdk-php": "^3.38"
   },
   "replace": {
     "extensions.silverstripe.org": "*"
