--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "symfony/yaml": "^2.8",
     "guzzlehttp/guzzle": "^6",
     "symbiote/silverstripe-queuedjobs": "dev-queue-buildtask as 3.x-dev",
-    "silverstripe/crontask": "^1.2",
+    "silverstripe/crontask": "1.x-dev",
     "silverstripe/environmentcheck": "^1.3",
     "aws/aws-sdk-php": "^3.38"
   },
