--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,6 @@
     {
       "type": "vcs",
       "url": "https://github.com/silverstripe/silverstripe-globaltoolbar.git"
-    },
-    {
-      "type": "vcs",
-      "url": "https://github.com/sminnee/silverstripe-queuedjobs.git"
     }
   ],
   "require": {
@@ -28,7 +24,7 @@
     "symfony/finder": "^2.8",
     "symfony/yaml": "^2.8",
     "guzzlehttp/guzzle": "^6",
-    "symbiote/silverstripe-queuedjobs": "dev-queue-buildtask as 3.x-dev",
+    "symbiote/silverstripe-queuedjobs": ">=3.1.0@dev",
     "silverstripe/crontask": "1.x-dev",
     "silverstripe/environmentcheck": "^1.3",
     "aws/aws-sdk-php": "^3.38"
