FIX Update syntax for url_rules in platform.yml

--- a/.platform.yml
+++ b/.platform.yml
@@ -13,4 +13,4 @@ shared_dirs:
     "addon-downloads": {}
   url_rules:
     mysite:
-      '^/addon-downloads/': 'deny'
+      - '^/addon-downloads/': 'deny'
