--- a/mysite/_config/jobs.yml
+++ b/mysite/_config/jobs.yml
@@ -6,3 +6,8 @@ CleanupJob:
   is_enabled: true
   cleanup_method: age
   cleanup_value: 3
+  cleanup_statuses:
+    - Complete
+    - Broken
+    - Paused
+    - Cancelled
