NEW Move CheckSuite class to injected dependency

--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -5,6 +5,7 @@ Injector:
   AddonBuilder:
     constructor:
       - %$PackagistService
+      - %$SilverStripe\ModuleRatings\CheckSuite
   AddonUpdater:
     constructor:
       - %$PackagistService
