--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "silverstripe/environmentcheck": "^1.3",
     "aws/aws-sdk-php": "^3.38",
     "silverstripe/moduleratings-plugin": "^0.1",
-    "squizlabs/php_codesniffer": "^3"
+    "squizlabs/php_codesniffer": "^3",
+    "symbiote/silverstripe-gridfieldextensions": "^2"
   },
   "replace": {
     "extensions.silverstripe.org": "*"
