FIX Instantiate CheckSuite as prototype rather than singleton

--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -6,6 +6,8 @@ Injector:
     constructor:
       - %$PackagistService
       - %$SilverStripe\ModuleRatings\CheckSuite
+  SilverStripe\ModuleRatings\CheckSuite:
+    type: prototype
   AddonUpdater:
     constructor:
       - %$PackagistService
