--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,16 @@
     "doctrine/instantiator": "~1.0.0",
     "symbiote-library/silverstripe-elastica": "^2",
     "symfony/event-dispatcher": "^2.8",
-    "symfony/filesystem": "^2.8",
+    "symfony/filesystem": "~3.0",
     "symfony/process": "^2.8",
-    "symfony/finder": "^2.8",
+    "symfony/finder": "~3.0",
     "symfony/yaml": "^2.8 | ^3.0",
-    "guzzlehttp/guzzle": "^6",
+    "guzzlehttp/guzzle": "^6.3",
     "symbiote/silverstripe-queuedjobs": ">=3.1.0@dev",
     "silverstripe/crontask": "1.x-dev",
     "silverstripe/environmentcheck": "^1.3",
     "aws/aws-sdk-php": "^3.38",
+    "silverstripe/moduleratings": "^1",
     "silverstripe/moduleratings-plugin": "^0.1",
     "squizlabs/php_codesniffer": "^3",
     "symbiote/silverstripe-gridfieldextensions": "^2"
