Update composer constraints for queuedjobs and crontask to use stable tags

--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "symfony/finder": "~3.0",
     "symfony/yaml": "^2.8 | ^3.0",
     "guzzlehttp/guzzle": "^6.3",
-    "symbiote/silverstripe-queuedjobs": ">=3.1.0@dev",
-    "silverstripe/crontask": "1.x-dev",
+    "symbiote/silverstripe-queuedjobs": "^3.1",
+    "silverstripe/crontask": "^1.2",
     "silverstripe/environmentcheck": "^1.3",
     "aws/aws-sdk-php": "^3.38",
     "silverstripe/moduleratings": "^1",
