--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "silverstripe/moduleratings": "^1",
     "silverstripe/moduleratings-plugin": "^0.1",
     "squizlabs/php_codesniffer": "^3",
-    "symbiote/silverstripe-gridfieldextensions": "^2"
+    "symbiote/silverstripe-gridfieldextensions": "^2",
+    "silverstripe/raygun": "^1"
   },
   "replace": {
     "extensions.silverstripe.org": "*"
