NEW Add JSON API to return rating metrics for modules

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -10,3 +10,4 @@ Director:
     "tags": TagsController
     "submit": SubmitAddonController
     "addonSort": AjaxController
+    'api/rating': RatingApiController
