--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
   "require-dev": {
     "phpunit/phpunit": "^4.8",
     "phpdocumentor/reflection-docblock": "~3.1.1",
-    "silverstripe/sqlite3": "*"
+    "silverstripe/sqlite3": "*",
+    "squizlabs/php_codesniffer": "^3"
   },
   "minimum-stability": "dev",
   "prefer-stable": true
