NEW Adding an API to show supported addons

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -11,3 +11,4 @@ Director:
     "submit": SubmitAddonController
     "addonSort": AjaxController
     'api/rating': RatingApiController
+    'api/supported-addons': SupportedAddonsApiController
