NEW Add ratings API controller that supports bulk rating data in a request
Also moves the default cache age value for RatingsController and RatingController into the base ApiController

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -11,4 +11,5 @@ Director:
     "submit": SubmitAddonController
     "addonSort": AjaxController
     'api/rating': RatingApiController
+    'api/ratings': RatingsApiController
     'api/supported-addons': SupportedAddonsApiController
