--- a/mysite/_config/injector.yml
+++ b/mysite/_config/injector.yml
@@ -26,6 +26,9 @@ Injector:
   BuildAddonsTask:
     constructor:
       - %$AddonBuilder
+  StitchDataSender:
+    properties:
+      TableName: packages
 ---
 Only:
   environment: 'live'
