--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "squizlabs/php_codesniffer": "^3",
     "symbiote/silverstripe-gridfieldextensions": "^2",
     "silverstripe/raygun": "^1",
-    "sminnee/stitchdata-php": "^0.1"
+    "sminnee/stitchdata-php": "^0.1",
+    "monolog/monolog": "^1.23"
   },
   "replace": {
     "extensions.silverstripe.org": "*"
