WIP - api/addons
This is a refactor of the pushed-based StitchData integration into a pull-based REST API

AddonToArray is the meat of the response generator.

/api/addons returns 50 elements and a “next” link to page through

--- a/mysite/_config/routes.yml
+++ b/mysite/_config/routes.yml
@@ -13,3 +13,4 @@ Director:
     'api/rating': RatingApiController
     'api/ratings': RatingsApiController
     'api/supported-addons': SupportedAddonsApiController
+    'api/addons': AddonsApiController
