--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 /crontask/
 /silverstripe-cache/
 /environmentcheck/
+/silverstripe-dynamodb/
+/ssp-core/
 /vendor/
 .vagrant
 .vagrant*
@@ -16,6 +18,7 @@ node_modules/
 /toolbar/
 /silverstripe-resque/
 display_logic/
+debug.log
 error.log
 dump.rdb
 /gridfieldextensions
