--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "silverstripe/raygun": "^2",
         "silverstripe/toolbar": "^5@dev",
         "silverstripe/framework": "^4.1",
-        "heyday/silverstripe-elastica": "^2",
+        "heyday/silverstripe-elastica": "^3.0@rc",
         "sminnee/stitchdata-php": "^0.1",
         "monolog/monolog": "^1.23",
         "silverstripe/ssp-core": "^2@dev"
@@ -44,8 +44,7 @@
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "phpdocumentor/reflection-docblock": "~3.1.1",
-        "silverstripe/sqlite3": "*",
-        "squizlabs/php_codesniffer": "^3"
+        "silverstripe/sqlite3": "*"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
