--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-less": "~0.5.0",
+    "grunt-contrib-uglify": "^4.0.1",
     "grunt-contrib-watch": "*"
   }
 }
