NEW Use ssorg UAT domain for GlobalNav in test environments

--- a/app/_config/config.yml
+++ b/app/_config/config.yml
@@ -22,7 +22,7 @@ Only:
 SilverStripe\Toolbar\TemplateProvider:
   css_file: '/themes/ssv3/css/toolbar.min.css'
 GlobalNav:
-  hostname: '//www.silverstripe.org/'
+  hostname: '//uat.silverstripe.org/'
   use_localhost: false
 ---
 Only:
