--- a/.env.default
+++ b/.env.default
@@ -4,14 +4,14 @@ SS_ENVIRONMENT_TYPE="dev"
 SS_DEFAULT_ADMIN_USERNAME="admin"
 SS_DEFAULT_ADMIN_PASSWORD="password"
 
-# Database connection details
-SS_DATABASE_SERVER="localhost"
+# Lando database connection details
+SS_DATABASE_SERVER="database"
 SS_DATABASE_USERNAME="root"
-SS_DATABASE_PASSWORD="root"
+SS_DATABASE_PASSWORD=""
 SS_DATABASE_NAME="SS_mysite"
 
 # For search
-ELASTICSEARCH_HOST="localhost"
+ELASTICSEARCH_HOST="elasticsearch"
 ELASTICSEARCH_PORT="9200"
 
 # For module rating metrics
