--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "phpdocumentor/reflection-docblock": "~3.1.1",
-        "silverstripe/sqlite3": "*"
+        "silverstripe/sqlite3": "*",
+        "silverstripe/sspak": "dev-master"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
