Increase worker TTL to 2h
Fixes regression in newer queuedjobs release: https://github.com/symbiote/silverstripe-queuedjobs/issues/325

The UpdateAddonsTask can easily take an hour,
even the first step (Packagist update) takes more than 5 mins
due to rate limiting.

--- a/app/_config/jobs.yml
+++ b/app/_config/jobs.yml
@@ -10,3 +10,6 @@ Symbiote\QueuedJobs\Jobs\CleanupJob:
     - Broken
     - Paused
     - Cancelled
+
+Symbiote\QueuedJobs\Services\QueuedJobService:
+  worker_ttl: 'PT120M'
