--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "composer/installers": "^1.5",
-        "composer/composer": "^1.6",
+        "composer/composer": "^2.0",
         "ezyang/htmlpurifier": "^4.10",
         "symbiote/silverstripe-multivaluefield": "^5.0",
         "knplabs/packagist-api": "^1.5",
@@ -21,18 +21,19 @@
         "symfony/finder": "~3.0",
         "symfony/yaml": "^2.8 | ^3.0",
         "guzzlehttp/guzzle": "^6.3",
-        "symbiote/silverstripe-queuedjobs": "^4.2",
+        "symbiote/silverstripe-queuedjobs": "^4",
         "silverstripe/crontask": "^2.0",
         "silverstripe/environmentcheck": "^2.0",
         "aws/aws-sdk-php": "^3.55",
         "silverstripe/moduleratings": "^1.0",
-        "silverstripe/moduleratings-plugin": "^0.1.1",
+        "silverstripe/moduleratings-plugin": "^0.2",
         "squizlabs/php_codesniffer": "^3.2",
         "symbiote/silverstripe-gridfieldextensions": "^3.1",
         "php": ">=7.3",
         "silverstripe/raygun": "^2",
         "silverstripe/toolbar": "^5@dev",
-        "silverstripe/framework": "^4.1",
+        "silverstripe/framework": "^4.7",
+        "silverstripe/assets": "^1.7",
         "heyday/silverstripe-elastica": "^3.0@rc",
         "sminnee/stitchdata-php": "^0.1",
         "monolog/monolog": "^1.23",
