--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
   - '7.3'
 
 before_script:
-  - composer self-update --1 || true
+  - composer self-update || true
   - composer install
 
 script:
