--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
         {
             "type": "vcs",
             "url": "https://github.com/silverstripe/silverstripe-globaltoolbar.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/open-sausages/packagist-api.git"
         }
     ],
     "require": {
@@ -12,7 +16,7 @@
         "composer/composer": "^2.0",
         "ezyang/htmlpurifier": "^4.10",
         "symbiote/silverstripe-multivaluefield": "^5.0",
-        "knplabs/packagist-api": "^1.5",
+        "knplabs/packagist-api": "dev-pulls/static-get as 1.5.0",
         "doctrine/inflector": "^1.3",
         "doctrine/instantiator": "^1.1",
         "symfony/event-dispatcher": "^4.0",
