MNT composer update all modules including queuedjobs fix

--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,11 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "config": {
+        "platform": {
+            "php": "7.4"
+        }
+    },
     "extra": {
         "project-files-installed": [
             "app/.htaccess",
