DEP Upgrade to framework 4.13
Also remove anything that couldn't be upgraded, including ratings.

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,21 @@
 .idea
 .project
 .settings
-/elastica/
-/framework/
-/multivaluefield/
-/sqlite3/
-/queuedjobs/
-/crontask/
-/silverstripe-cache/
-/environmentcheck/
-/silverstripe-dynamodb/
-/ssp-core/
-/vendor/
+.vscode/
 .vagrant
 .vagrant*
-node_modules/
-/toolbar/
-/silverstripe-resque/
-display_logic/
 debug.log
 error.log
 dump.rdb
-/gridfieldextensions
-_ss_environment.php
-host.txt
-/raygun/
-/resources/
-/silverstripe-elastica/
 .env
+.phpunit.result.cache
+/silverstripe.log
+/.dev-tools-env
+/docker-02/
+/logs/
+/app/_config/dev/
+/artifacts/
+/silverstripe-cache/
+/vendor/
+node_modules/
+/toolbar/
