--- a/composer.json
+++ b/composer.json
@@ -1,65 +1,55 @@
 {
     "name": "silverstripe/addons.silverstripe.org",
     "description": "The SilverStripe addons listing site",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/silverstripe/silverstripe-globaltoolbar.git"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/open-sausages/packagist-api.git"
-        }
-    ],
     "require": {
-        "composer/installers": "^1.5",
+        "php": "^8.1",
+        "silverstripe/recipe-core": "^4.13",
+        "silverstripe/admin": "^1.13",
         "composer/composer": "^2.0",
-        "ezyang/htmlpurifier": "^4.10",
-        "symbiote/silverstripe-multivaluefield": "^5.0",
         "knplabs/packagist-api": "dev-pulls/static-get as 2.0.0",
-        "symfony/event-dispatcher": "^4.0",
-        "symfony/filesystem": "^4.0",
-        "symfony/process": "^4.0",
-        "symfony/finder": "~3.0",
-        "symfony/yaml": "^2.8 | ^3.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^7",
         "symbiote/silverstripe-queuedjobs": "^4",
         "silverstripe/crontask": "^2.0",
         "silverstripe/environmentcheck": "^2.0",
         "aws/aws-sdk-php": "^3.55",
-        "silverstripe/moduleratings": "^1.0",
-        "squizlabs/php_codesniffer": "^3.2",
         "symbiote/silverstripe-gridfieldextensions": "^3.1",
-        "php": ">=7.4",
-        "silverstripe/raygun": "^2",
-        "silverstripe/toolbar": "^5@dev",
-        "silverstripe/framework": "^4.7",
-        "silverstripe/assets": "^1.7",
-        "heyday/silverstripe-elastica": "^3.0@rc",
-        "sminnee/stitchdata-php": "^0.1",
-        "monolog/monolog": "^1.23",
-        "silverstripe/ssp-core": "^2@dev"
+        "heyday/silverstripe-elastica": "~4.1.6",
+        "symbiote/silverstripe-multivaluefield": "^5.0",
+        "ezyang/htmlpurifier": "^4.10",
+        "silverstripe/toolbar": "^5@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7",
-        "phpdocumentor/reflection-docblock": "~3.1.1",
-        "silverstripe/sqlite3": "*"
+        "silverstripe/recipe-testing": "^2"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "config": {
-        "platform": {
-            "php": "7.4"
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/silverstripe/silverstripe-globaltoolbar.git"
         }
-    },
+    ],
     "extra": {
+        "resources-dir": "_resources",
+        "expose": [
+            "themes/addons/bootstrap",
+            "themes/addons/css",
+            "themes/addons/favicons",
+            "themes/addons/fonts",
+            "themes/addons/images",
+            "themes/addons/javascript"
+        ],
         "project-files-installed": [
             "app/.htaccess",
             "app/_config.php",
+            "app/_config/mimevalidator.yml",
             "app/_config/mysite.yml",
+            "app/src/Page.php",
+            "app/src/PageController.php",
+            "behat.yml",
             "mysite/.htaccess",
             "mysite/_config.php",
-            "mysite/_config/mysite.yml"
+            "mysite/_config/mysite.yml",
+            "phpcs.xml.dist",
+            "phpunit.xml.dist"
         ],
         "public-files-installed": [
             ".htaccess",
@@ -68,5 +58,14 @@
             "install.php",
             "web.config"
         ]
-    }
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "silverstripe/vendor-plugin": true,
+            "silverstripe/recipe-plugin": true
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
