ENH Fetch readme via JS when looking at a module
Needs API token to avoid rate limiting users.
Also don't fetch separate screenshots.

--- a/.env.default
+++ b/.env.default
@@ -14,10 +14,5 @@ SS_DATABASE_NAME="SS_mysite"
 ELASTICSEARCH_HOST="localhost"
 ELASTICSEARCH_PORT="9200"
 
-# For module rating metrics
-SS_GITHUB_SS_GITHUB_OAUTH_TOKEN=""
-TRAVIS_CI_TOKEN=""
+# For composer, required by packagist
 COMPOSER_HOME="/tmp"
-
-# For Raygun
-SS_RAYGUN_APP_KEY=""
