ENH Remove some unnecessary stuff

--- a/app/_config/routes.yml
+++ b/app/_config/routes.yml
@@ -5,8 +5,7 @@ SilverStripe\Control\Director:
   rules:
     '': HomeController
     add-ons: AddonsController
-    vendors: VendorsController
-    authors: AuthorsController
+    author: AuthorController
     tags: TagsController
     submit: SubmitAddonController
     addonSort: AjaxController
